@@ -4343,11 +4343,11 @@ sub scan_autoconf_traces
         if ($macro eq 'AC_CONFIG_FILES')
 	{
 	    # Look at potential Makefile.am's.
-	    &scan_autoconf_config_files (@args[0]);
+	    &scan_autoconf_config_files ($args[0]);
 	}
         elsif ($macro eq '_AC_LIBOBJ_DECL')
 	{
-	    local ($source) = "@args[0].c";
+	    local ($source) = "$args[0].c";
 	    # We should actually also `close' the sources: getopt.c
 	    # wants getopt.h etc.  But actually it should be done in the
 	    # macro itself, i.e., we have to first fix Autoconf to extend
@@ -4360,10 +4360,10 @@ sub scan_autoconf_traces
 	}
         elsif ($macro eq 'AC_SUBST')
 	{
-	    if (!defined $configure_vars{@args[0]})
+	    if (!defined $configure_vars{$args[0]})
 	        {
-		    print STDERR "traces: discovered AC_SUBST(@args[0])\n";
-		    $configure_vars{@args[0]} = $here;
+		    print STDERR "traces: discovered AC_SUBST($args[0])\n";
+		    $configure_vars{$args[0]} = $here;
 	        }
 	}
     }
@@ -7077,7 +7077,7 @@ sub file_contents
  	else
  	{
 	    # This isn't an error; it is probably some tokens which
-	    # configure is supposed to replace, such as `@SET_MAKE@'.
+	    # configure is supposed to replace, such as `@SET-MAKE@'.
  	    $result_rules .= "$comment$separator$_\n";
  	    $comment = $separator = '';
  	}
