@@ -1,5 +1,10 @@
 2001-01-31  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: maintainer-check fixes.
+
+	
+2001-01-31  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (file_contents): Rewrite: instead of trying to parse
 	it line by line, first swallow it completely into $CONTENTS,
 	*then*, parse it *paragraph* by paragraph.
